--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/Dashboard_TCO.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/Dashboard_TCO.fxml
@@ -11,7 +11,7 @@
    <left>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox layoutX="14.0" layoutY="40.0" prefHeight="245.0" prefWidth="156.0">
+            <VBox layoutX="14.0" layoutY="8.0" prefHeight="152.0" prefWidth="156.0" style="-fx-border-color: #1877F2;">
                <children>
                   <Button mnemonicParsing="false" onAction="#dashboardOA" prefHeight="26.0" prefWidth="209.0" text="Dashboard">
                      <font>
