--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Incident_Reports_plazaL6.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Incident_Reports_plazaL6.fxml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Fima.LiaisonOfficer.IncidentReportsPlazaL6"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="476.0" prefWidth="736.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.LiaisonOfficer.IncidentReportsPlazaL6">
+   <children>
+      <Label layoutX="179.0" layoutY="14.0" text="Incident Reports from the Plaza">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </Label>
+      <Label fx:id="ReportTimetextfield" layoutX="22.0" layoutY="83.0" text="Report Time" />
+      <Label layoutX="23.0" layoutY="126.0" text="Report Date" />
+      <Label layoutX="23.0" layoutY="169.0" text="Booth  Number" />
+      <TextField layoutX="114.0" layoutY="79.0" prefHeight="26.0" prefWidth="158.0" />
+      <Label layoutX="23.0" layoutY="220.0" text="Incident Details" />
+      <TextArea fx:id="IncidentDetailstextarea" layoutX="23.0" layoutY="247.0" prefHeight="163.0" prefWidth="250.0" />
+      <TableView fx:id="showdatatableview" layoutX="319.0" layoutY="169.0" prefHeight="200.0" prefWidth="407.0">
+        <columns>
+          <TableColumn fx:id="BoothNumbertablecolumn" prefWidth="114.4000244140625" text="Booth  Number" />
+          <TableColumn fx:id="ReportDatetablecolumn" prefWidth="96.79998779296875" text="Report Date" />
+            <TableColumn fx:id="ReportTimetablecolumn" prefWidth="89.5999755859375" text="Report Time" />
+            <TableColumn fx:id="IncidentDetailstablecolumn" prefWidth="113.5999755859375" text="Incident Details" />
+        </columns>
+      </TableView>
+      <Line endX="-120.80706787109375" endY="25.149993896484375" layoutX="418.0" layoutY="95.0" startX="-121.5999755859375" startY="385.0" />
+      <Line endX="330.0" endY="1.5" layoutX="406.0" layoutY="122.0" startX="-108.0999755859375" startY="1.5" />
+      <Button layoutX="179.0" layoutY="424.0" mnemonicParsing="false" onAction="#Submitonactionbutton" prefHeight="26.0" prefWidth="90.0" text="Submit" />
+      <ComboBox fx:id="BoothNumbercombobox" layoutX="114.0" layoutY="165.0" prefHeight="26.0" prefWidth="158.0" />
+      <DatePicker fx:id="ReportDatedatepicker" layoutX="115.0" layoutY="122.0" prefHeight="26.0" prefWidth="157.0" />
+   </children>
 </AnchorPane>
