--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/ External_InquiriesContractors_OfficialsL7.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/ External_InquiriesContractors_OfficialsL7.fxml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Fima.LiaisonOfficer.ExternalInquiriesContractorsOfficialsL7"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="497.0" prefWidth="760.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.LiaisonOfficer.ExternalInquiriesContractorsOfficialsL7">
+   <children>
+      <Label layoutX="189.0" layoutY="14.0" text=" External Inquiries from Contractors or Officials">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="73.0" text="Contractors Name" />
+      <Label layoutX="56.0" layoutY="111.0" text="ID" />
+      <Label layoutX="17.0" layoutY="148.0" text="Contact Info" />
+      <TextField layoutX="129.0" layoutY="69.0" />
+      <TextField layoutX="130.0" layoutY="107.0" />
+      <TextField layoutX="131.0" layoutY="144.0" />
+      <Label layoutX="50.0" layoutY="190.0" />
+      <Label layoutX="18.0" layoutY="191.0" text="Department" />
+      <ComboBox layoutX="130.0" layoutY="187.0" prefWidth="150.0" />
+      <Label layoutX="334.0" layoutY="64.0" text="Inquiries Purpose" />
+      <TextArea layoutX="334.0" layoutY="82.0" prefHeight="126.0" prefWidth="232.0" />
+      <TableView layoutX="1.0" layoutY="234.0" prefHeight="200.0" prefWidth="511.0">
+        <columns>
+          <TableColumn prefWidth="127.20001220703125" text="Contractors Name" />
+          <TableColumn prefWidth="58.39996337890625" text="ID" />
+            <TableColumn prefWidth="104.00006103515625" text="Contact Info" />
+            <TableColumn prefWidth="91.20001220703125" text="Department" />
+            <TableColumn prefWidth="134.39996337890625" text="Inquiries Purpose" />
+        </columns>
+      </TableView>
+      <Label layoutX="566.0" layoutY="234.0" prefHeight="78.0" prefWidth="118.0" style="-fx-border-color: red;" text="Label" />
+      <Button layoutX="379.0" layoutY="448.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="97.0" text="Approve" />
+      <Button layoutX="611.0" layoutY="387.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="98.0" text="Home" />
+   </children>
 </AnchorPane>
