--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/LiaisonOfficer_Dashboard.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/LiaisonOfficer_Dashboard.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Fima.LiaisonOfficer.LiaisonOfficerDashboard"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="608.0" prefWidth="637.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.LiaisonOfficer.LiaisonOfficerDashboard">
+   <children>
+      <Label layoutX="209.0" layoutY="14.0" text="LiaisonOfficer_Dashboard">
+         <font>
+            <Font name="System Bold" size="21.0" />
+         </font>
+      </Label>
+      <Button layoutX="51.0" layoutY="72.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="195.0" text="Toll Booth Staff and Management" />
+      <Button layoutX="51.0" layoutY="126.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="195.0" text="Shift Reports" />
+      <Button layoutX="51.0" layoutY="181.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="195.0" text="System Failure Report" />
+      <Button layoutX="51.0" layoutY="238.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="199.0" text="Interdepartmental Communication" />
+      <Button layoutX="51.0" layoutY="292.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="199.0" text="Meeting Scheduler" />
+      <Button layoutX="51.0" layoutY="350.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="199.0" text="Incident Reports from Plaza" />
+      <Button layoutX="51.0" layoutY="414.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="199.0" text="External Inquiries" />
+      <Button layoutX="51.0" layoutY="471.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="199.0" text="Crisis Response" />
+      <Button layoutX="54.0" layoutY="532.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="195.0" text="Log Out" />
+   </children>
 </AnchorPane>
