--- a/src/main/resources/cse_213/final_project/Fima/VipEmergencyVehicles.fxml
+++ b/src/main/resources/cse_213/final_project/Fima/VipEmergencyVehicles.fxml
@@ -26,5 +26,6 @@
         </columns>
       </TableView>
       <TextField fx:id="vehiclemodeltextfield" layoutX="218.0" layoutY="93.0" promptText="Vehicle Model" />
+      <Button layoutX="513.0" layoutY="496.0" mnemonicParsing="false" onAction="#homeonactionbutton" text="Button" />
    </children>
 </AnchorPane>
