--- a/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Crisis_Response_CoordinationL8 .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/LiaisonOfficer/Crisis_Response_CoordinationL8 .fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="cse_213.final_project.Fima.LiaisonOfficer.CrisisResponseCoordinationL8"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="365.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.LiaisonOfficer.CrisisResponseCoordinationL8">
+   <children>
+      <Label layoutX="184.0" layoutY="14.0" text="Crisis_Response_CoordinationL8 ">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="76.0" layoutY="110.0" />
+      <Label layoutX="62.0" layoutY="102.0" text="Situation details" />
+      <TextArea fx:id="Situationdetailstextarea" layoutX="62.0" layoutY="128.0" prefHeight="114.0" prefWidth="238.0" />
+      <Label fx:id="showmassagelable" layoutX="405.0" layoutY="142.0" prefHeight="60.0" prefWidth="70.0" style="-fx-border-color: blue;" />
+      <Button layoutX="142.0" layoutY="264.0" mnemonicParsing="false" onAction="#submitonactionbutton" prefHeight="26.0" prefWidth="70.0" text="Submit" />
+      <Button layoutX="466.0" layoutY="308.0" mnemonicParsing="false" onAction="#homeonactionbutton" prefHeight="26.0" prefWidth="85.0" text="Home" />
+   </children>
 </AnchorPane>
