--- a/src/main/resources/cse_213/final_project/Fima/ ShiftAttendance .fxml
+++ b/src/main/resources/cse_213/final_project/Fima/ ShiftAttendance .fxml
@@ -13,11 +13,11 @@
 <AnchorPane prefHeight="462.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Fima.Controllers.ShiftAttendance">
    <children>
       <TextField fx:id="IDTEXTFIELD" layoutX="31.0" layoutY="25.0" promptText="ID" />
-      <TextField fx:id="OPERATORNAMETEXTFIELD" layoutX="31.0" layoutY="72.0" promptText="Operator Name" />
-      <ComboBox fx:id="TOLLBOOTHOPERATORCOMBOBOX" layoutX="30.0" layoutY="114.0" prefWidth="150.0" promptText="Toll Booth Number " />
-      <DatePicker fx:id="DATEDATEPICKER" layoutX="31.0" layoutY="163.0" promptText="Date" />
-      <RadioButton fx:id="DAYRADIOBUTTON" layoutX="376.0" layoutY="51.0" mnemonicParsing="false" text="Day" />
-      <RadioButton fx:id="NIGHTRADIOBUTTON" layoutX="435.0" layoutY="51.0" mnemonicParsing="false" text="Night" />
+      <TextField fx:id="OPERATORNAMETEXTFIELD" layoutX="30.0" layoutY="72.0" promptText="Operator Name" />
+      <ComboBox fx:id="TOLLBOOTHnumberCOMBOBOX" layoutX="30.0" layoutY="114.0" prefWidth="150.0" promptText="Toll Booth Number " />
+      <DatePicker fx:id="DATEDATEPICKER" layoutX="31.0" layoutY="163.0" prefHeight="26.0" prefWidth="150.0" promptText="Date" />
+      <RadioButton fx:id="DAYRADIOBUTTON" layoutX="333.0" layoutY="51.0" mnemonicParsing="false" text="Day" />
+      <RadioButton fx:id="NIGHTRADIOBUTTON" layoutX="412.0" layoutY="51.0" mnemonicParsing="false" text="Night" />
       <Label layoutX="288.0" layoutY="51.0" text="Shift" />
       <TextField fx:id="STARTTIMETEXTFIELD" layoutX="288.0" layoutY="85.0" promptText="Start Time" />
       <TextField fx:id="ENDTIMETEXTFIELD" layoutX="288.0" layoutY="127.0" promptText="End Time" />
