--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_5_emergancymode.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_5_emergancymode.fxml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G_5_EmergencyModeController">
    <children>
-      <CheckBox layoutX="83.0" layoutY="90.0" mnemonicParsing="false" onAction="#laneOneOA" text="Lane 1" />
-      <CheckBox layoutX="147.0" layoutY="90.0" mnemonicParsing="false" onAction="#LaneTwoOA" text="Lane 2" />
-      <CheckBox layoutX="211.0" layoutY="90.0" mnemonicParsing="false" onAction="#LanethreeOA" text="Lane 3" />
-      <CheckBox layoutX="274.0" layoutY="90.0" mnemonicParsing="false" onAction="#LaneFourOA" text="Lane 4" />
-      <CheckBox layoutX="337.0" layoutY="90.0" mnemonicParsing="false" onAction="#LaneFiveOA" text="Lane 5" />
-      <CheckBox layoutX="399.0" layoutY="90.0" mnemonicParsing="false" onAction="#LaneSixOA" text="Lane 6" />
       <Label layoutX="14.0" layoutY="92.0" text="Select Lane:" />
-      <ComboBox layoutX="107.0" layoutY="129.0" prefWidth="150.0" promptText="Select Reason" />
+      <ComboBox fx:id="reasonComboBox" layoutX="107.0" layoutY="129.0" prefWidth="150.0" promptText="Select Reason" />
       <Label layoutX="14.0" layoutY="133.0" text="Valid Reason:" />
-      <TextField layoutX="108.0" layoutY="175.0" />
+      <TextField fx:id="regNoTF" layoutX="108.0" layoutY="175.0" />
       <Label layoutX="14.0" layoutY="179.0" text="Registration No:" />
-      <Button layoutX="132.0" layoutY="215.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="125.0" style="-fx-background-color: #1877F2;" text="Notify Progress" textFill="WHITE" />
+      <Button layoutX="132.0" layoutY="215.0" mnemonicParsing="false" onAction="#saveOA" prefHeight="26.0" prefWidth="125.0" style="-fx-background-color: #1877F2;" text="Save" textFill="WHITE" />
       <Button layoutX="5.0" layoutY="20.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
+      <RadioButton fx:id="lane1" layoutX="77.0" layoutY="92.0" mnemonicParsing="false" text="Lane 1">
+         <toggleGroup>
+            <ToggleGroup fx:id="lane" />
+         </toggleGroup>
+      </RadioButton>
+      <RadioButton fx:id="lane2" layoutX="138.0" layoutY="92.0" mnemonicParsing="false" text="Lane 2" toggleGroup="$lane" />
+      <RadioButton fx:id="lane3" layoutX="201.0" layoutY="92.0" mnemonicParsing="false" text="Lane 3" toggleGroup="$lane" />
+      <RadioButton fx:id="lane4" layoutX="265.0" layoutY="92.0" mnemonicParsing="false" text="Lane 4" toggleGroup="$lane" />
+      <RadioButton fx:id="lane5" layoutX="333.0" layoutY="92.0" mnemonicParsing="false" text="Lane 5" toggleGroup="$lane" />
+      <RadioButton fx:id="lane6" layoutX="401.0" layoutY="92.0" mnemonicParsing="false" text="Lane 6" toggleGroup="$lane" />
    </children>
 </AnchorPane>
