--- a/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_6_LaneManage.fxml
+++ b/src/main/resources/cse_213/final_project/Tawhid/TrafficControlOfficer/G_6_LaneManage.fxml
@@ -10,7 +10,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cse_213.final_project.Tawhid.Controllers.G_6_LaneManageController">
    <children>
-      <TableView fx:id="alortedTV" layoutX="22.0" layoutY="209.0" prefHeight="137.0" prefWidth="459.0">
+      <TableView fx:id="alortedTV" layoutX="22.0" layoutY="217.0" prefHeight="77.0" prefWidth="459.0">
         <columns>
           <TableColumn fx:id="LaneoneCOL" prefWidth="75.99999809265137" text="Lane 1" />
           <TableColumn fx:id="LanetwoCOL" prefWidth="58.39997100830078" text="Lane 2" />
@@ -21,9 +21,9 @@
         </columns>
       </TableView>
       <Button layoutX="226.0" layoutY="168.0" mnemonicParsing="false" onAction="#AllowRouteOA" prefHeight="26.0" prefWidth="94.0" style="-fx-background-color: #1877F2;" text="Allow route" textFill="WHITE" />
-      <Button layoutX="355.0" layoutY="364.0" mnemonicParsing="false" onAction="#SaveOA" prefHeight="26.0" prefWidth="119.0" style="-fx-background-color: #1877F2;" text="Save" textFill="WHITE" />
+      <Button layoutX="354.0" layoutY="322.0" mnemonicParsing="false" onAction="#SaveOA" prefHeight="26.0" prefWidth="119.0" style="-fx-background-color: #1877F2;" text="Save" textFill="WHITE" />
       <ComboBox fx:id="Lane1CB" layoutX="110.0" layoutY="73.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 1" />
-      <ComboBox fx:id="Lane2CB" layoutX="196.0" layoutY="73.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 2" />
+      <ComboBox fx:id="Lane2CB" layoutX="196.0" layoutY="72.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 2" />
       <ComboBox fx:id="Lane3CB" layoutX="282.0" layoutY="73.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 3" />
       <ComboBox fx:id="Lane4CB" layoutX="110.0" layoutY="110.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 4" />
       <ComboBox fx:id="Lane5CB" layoutX="196.0" layoutY="110.0" prefHeight="26.0" prefWidth="79.0" promptText="Lane 5" />
@@ -39,5 +39,6 @@
          </font>
       </Text>
       <Button layoutX="22.0" layoutY="15.0" mnemonicParsing="false" onAction="#backOA" text="Back" />
+      <Button layoutX="222.0" layoutY="322.0" mnemonicParsing="false" onAction="#deleteFromListOA" prefHeight="26.0" prefWidth="119.0" style="-fx-background-color: #1877F2;" text="Delete From List" textFill="WHITE" />
    </children>
 </AnchorPane>
